# agora-library

./: LICENSE  README.md  config.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: __init__.py  error_handlers.py
app/api/: auth_controller.py  book_controller.py  user_controller.py
app/controllers/: auth_controller.py  book_controller.py  home_controller.py  user_controller.py
app/models/: admin.py  book.py  user.py
app/routes/: auth_routes.py  book_routes.py  home_routes.py  user_routes.py
app/services/: auth_service.py  book_service.py  user_services.py
app/static/js/: delete_user.js  login.js  profile.js  register.js
app/static/ts/: FlashMessages.js  FlashMessages.ts  delete_user.ts  login.ts  profile.ts  register.js  register.ts  tsconfig.json  types.ts
app/static/ts/static/js/: login.js  register.js
app/templates/: base.html  book_creation_page.html  catalog.html  home.html  login.html  profile.html  register.html
app/templates/auth/: register.html
app/templates/components/: header.html
app/templates/errors/: error_404.html
instance/: agora_library.db
migrations/versions/: 2ce03cb020b0_users_now_have_name_instead_of_username_.py  48d67d342fa3_initial_migration.py  5ef63cf94650_creates_the_book_entity.py  5fdf5cf03da3_adds_role_to_user_entity.py  ea059fd57451_user_must_have_an_unique_username_and_.py
